# RantAI-Agents

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  DIGITAL-EMPLOYEE-UX-IMPLEMENTATION.md  DIGITAL-EMPLOYEE-UX-PLAN.md  Dockerfile  KB_VISION_EXTRACTION_LATENCY.md  KB_VISION_MODEL_BENCHMARKS.md  MASTRA.md  ONPREM_DEPLOYMENT.md  README.md  RUST.md  SKILL-SYSTEM-PLAN.md  bunfig.toml  docker-compose.yml  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  prompt.temp  release-compat.json  server.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json  settings.local.json
app/: globals.css  layout.tsx
components/: error-boundary.tsx
docker/: init.sql  searxng-settings.yml
docs/: ARTIFACT-BACKEND-IMPROVEMENTS.md  FRAUD-DETECTION-IMPLEMENTATION-PLAN.md  FRAUD-DETECTION-WORKFLOW.md  dashboard-ui-conventions.md  mastra-memory-integration-plan.md
docs-site/: mdx-components.tsx  package.json  theme.config.tsx
hooks/: use-agent-api-keys.ts  use-assistant-mcp-servers.ts  use-assistant-test-sessions.ts  use-assistant-tools.ts  use-tasks.ts  (+24 more)
installer/: Cargo.toml
installer/src/: app.rs  main.rs  theme.rs
installer/src/installer/: app_setup.rs  config.rs  database.rs  deps.rs  executor.rs  infrastructure.rs  mod.rs  preflight.rs  services.rs  verify.rs
installer/src/ui/: mod.rs
installer/src/ui/screens/: complete.rs  config.rs  error.rs  mod.rs  mode_select.rs  optional_services.rs  preflight.rs  progress.rs  verify.rs  welcome.rs
installer/src/ui/widgets/: checklist.rs  log_viewer.rs  mod.rs  phase_progress.rs  status_bar.rs
(+2174 files in other folders)
