[package]
name = "rantai-agents-installer"
version = "0.1.0"
edition = "2021"
description = "TUI installer for RantAI Agents platform"

[[bin]]
name = "rantai-agents-installer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
sysinfo = "0.32"
nix = { version = "0.29", features = ["user", "fs"] }
anyhow = "1"
thiserror = "1"
chrono = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
